Star Wars update

--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-*:where(:not(iframe, canvas, img, svg, video):not(svg *, symbol *)) {
+*:where(:not(iframe, canvas, img, svg, video, h1):not(svg *, symbol *)) {
     all: unset;
     display: revert;
 }
