--- a/css/style.css
+++ b/css/style.css
@@ -1,250 +1,142 @@
-/*stylesheet*/
 
-/* vars */
-:root {
-  --background-color: #FDFEFF;
-  --body-color: #FDFEFF;
-}
-body {
-  background-image: url(../images/control.jpg);
-  background-size:cover;
-  background-repeat:no-repeat;
+*{
+	margin: 0;
+	padding: 0;
 }
 
-h1 {
-    font-family: Futura,  sans-serif;
-    align-items: center;
+html, body {
+	height: 100%;
+	margin 0;
+	font-family: itc-avant-garde-gothic-pro, sans-serif;
+	color: #E1E7E4;
+	font-size: 15px;
 }
 
 body {
-  margin: 0;  
-  font-family: 'Helvetica', monospace;
-  font-weight: 300;
-  color:#FDFEFF;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	display: flex;
+	font-size: 1rem;
 }
 
 
-h1, h2, h3, h4, p {
-  margin-top: 0;
-  margin-bottom: 1em;
+.container{
+	height: 100vh;
+	width:100%;
+	margin: 0 auto;
+	background-image: url(../images/tiefighter.jpg);
+	background-position: center;
+	background-size:cover;
+	padding-left: 5%;
+	box-sizing: border-box;
+	position: relative;
 }
 
-h1, h2 {
-  font-weight: 700;
+.navbar{
+	width:100%;
+	height:  15vh;
+	margin:auto;
+	display:flex;
+	align-items: center;
 }
 
-#wrapper {
-  margin: 0 auto;
-  max-width: 1200px;
+nav{
+	flex:  1;
+	padding-left:60px;
 }
 
-#main, #footer, #masthead {
-  margin: 2em 2em 0;
+nav ul li{
+	display: inline-block;
+	list-style: none;
+	margin: 0px 20px;
 }
 
-#logo a {
-  text-decoration: none;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  align-items: center;
+nav ul a{
+	text-decoration:none;
+	color:#f8f8ff;
+	font-size: 15px;
+	font-family: itc-avant-garde-gothic-pro, sans-serif;
+	font-weight: 300;
+	font-style: normal;
 }
 
-#logo h1 {
-  letter-spacing: 1px;
-  font-weight: 300;
-  font-size: 1.2rem;
-  margin-bottom: 0;
+.galaxy h1 {
+	animation: fadeIn 2s ease-in;
+	font-size: 60px;
+	font-weight: 400;
+	font-family: itc-avant-garde-gothic-pro, sans-serif;
+	line-height: 1.35;
+	width: 100%;
+	margin-top: 150px;
+	margin-bottom: 150px;
+	color: #E1E7E4;
+	text-shadow:
+      0 0 7px #fff;
+	text-align: center;
 }
 
-#logo svg {
-  margin-right: .25rem;
-  height: 3.6rem;
-  width: auto;
+@keyframes fadeIn{
+	from {
+		color:#4bd5ee;
+	}
+
+	to {
+		color:#E1E7E4;
+		text-shadow:
+      	0 0 7px #fff;
+	}
 }
 
-#topnav ul {
-  list-style: none;
-  padding-left: 0;
-  margin: 0;
-  display: flex; 
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-  align-items: center;
+.fade {
+position: relative;
+width: 100%;
+min-height: 60vh;
+top: -25px;
+z-index: 1;
 }
 
-#topnav ul {
-  display: flex;
+.title {
+display: flex;
+justify-content: center;
+position: relative;
+height: 500px;
+color: #E1E7E4;
+font-family: itc-avant-garde-gothic-pro, sans-serif;
+font-size: 75px;
+font-weight: 400;
+letter-spacing: 5px;
+line-height: 150%;
+perspective: 1000px;
 }
 
-#topnav li {
-  margin-right: 2em;
-  margin-bottom: 0;
+.crawl {
+position: relative;
+top: 99999px;
+transform-origin: 50% 100%;
+animation: crawl 90s linear;
 }
 
-#topnav li:first-child {
-  margin-right: auto;
+.crawl > .title {
+font-size: 90%;
+text-align: center;
 }
 
-#topnav li:last-child {
-  margin-right: 0;
+.crawl > .title h1 {
+margin: 0 0 15px;
+text-align: center;
 }
 
-#topnav li a {
-  text-decoration: none;
-  font-size: 1.2rem;
+.crawl >.title p {
+	justify-content: center;
 }
-
-/* INTRO */
-
-#intro {
-  display: flex;
-  align-items: center;
-  height: 70vh;
+@keyframes crawl {
+0% {
+top: -100px;
+transform: rotateX(20deg)  translateZ(0);
 }
-
-#work h3, #page h3 {
-  font-weight: 600;
-  letter-spacing: 1px;
-  margin-bottom: 2rem;
+100% {
+top: -6000px;
+transform: rotateX(25deg) translateZ(-2500px);
 }
-
-#work h3 a, #page h3 a {
-  color: var(--body-color);
-  text-decoration: none;
-}
-
-.work-item {
-  overflow: hidden;
-  position: relative;
-  width: 100%; 
-}
-
-.work-item .inner .work-inside {
-  color: #FDFEFF;
-  padding: 2rem;
-  width: 100%;
-  background-color: var(--body-color);
-  text-align: right;
-}
-
-.work-item .inner .work-inside p:last-child {
-  margin-bottom: 0;
-}
-
-.work-item .inner:hover .work-inside {
-  opacity: 1;
-}
-
-.work-item img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-/* PAGE */
-
-#page {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
-.page-item .date-holder {
-  margin-bottom: .25em;
-}
-
-.page-item img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.page-item .caption {
-  font-size: .75rem;
-  color: #FDFEFF;
-  display: block;
-  width: 100%;
-  margin-top: .5rem;
-  margin-bottom: 2rem;
-  text-align: right;
-}
-
-.page-item .date {
-  margin: 0;
-  font-size: .85rem;
-  padding: 0 4px;
-  color: var(--background-color);
-  display: inline-block;
-  background-color: var(--body-color);
-}
-
-.page-item h2 a {
-  color: var(--body-color);
-  text-decoration-color: transparent; 
-  transition: text-decoration-color .3s ease-in-out;
-}
-
-.page-item h2 a:hover {
-  color: var(--body-color);
-  text-decoration-color: var(--body-color); 
-}
-
-.page-item p a {
-  color: var(--body-color);
-  text-decoration-color: var(--body-color); 
-}
-
-
-/*FOOTER*/
-
-#footer {
-  padding: 2em;
-  text-align: center;
-  font-size: .85rem;
-}
-
-#footer p:last-child {
-  margin-bottom: 0;
-}
-
-/*RESPONSIVE*/
-
-/* for variable type sizing */
-@media screen and (min-width: 320px) {
-  body {
-    font-size: calc(12px + 4 * ((100vw - 320px) / 960));
-  }
-}
-
-@media all and (max-width: 699px) { 
-
-  #intro-holder h1 {
-    font-size: 2.2rem
-  }
-
-  .work-item .inner .work-inside {
-    opacity: 1;
-  }
-
-}
-
-@media all and (min-width: 700px) {
-
-  #intro-holder h1 {
-    font-size: 3.2rem
-  }
-
-  #intro {
-    height: 70vh;
-  }
-
-  #intro-holder {
-    padding: 0 5em;
-  }
-
-  body {
-    font-size: 18px;
-  }
-
 }
