--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ body {
 	align-items: center;
 	display: flex;
 	font-size: 1rem;
+	background-image: url(../images/spaceblue.jpg);
+	background-position: center;
+	background-size:cover;
+	background-attachment: fixed;
+	background-repeat: no-repeat;
 }
 
 
@@ -25,9 +30,6 @@ body {
 	height: 100vh;
 	width:100%;
 	margin: 0 auto;
-	background-image: url(../images/tiefighter.jpg);
-	background-position: center;
-	background-size:cover;
 	padding-left: 5%;
 	box-sizing: border-box;
 	position: relative;
@@ -79,6 +81,8 @@ nav ul a{
 @keyframes fadeIn{
 	from {
 		color:#4bd5ee;
+		text-shadow: 0 0 7px #4bd5ee;
+
 	}
 
 	to {
@@ -139,4 +143,24 @@ transform: rotateX(20deg)  translateZ(0);
 top: -6000px;
 transform: rotateX(25deg) translateZ(-2500px);
 }
+}
+
+
+
+.timeline {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
 }
